--- a/css/mini2.css
+++ b/css/mini2.css
@@ -5,19 +5,9 @@ html {
 
 img {
     width:      100%;
-    max-width:  1200px;
+    max-width:  900px;
 }
 
-#nav {
-    /* border-bottom: 1px solid black; */
-    margin-bottom: 2em;
-    margin-top: 1em;
-}
-
-#ftr {
-    margin-top: 2em;
-    /* border-top: 1px solid black; */
-}
 
 @media (prefers-color-scheme: dark) {
     body {
